tests/baselines/reference/nodeResolution8(strict=true).errors.txt
node_modules/a/index.d.ts(2,20): error TS7005: Variable 'y' implicitly has an 'any' type.


==== b.ts (0 errors) ====
    import y = require("a");
==== node_modules/a/ref.ts (0 errors) ====
    var x = 1;
    
==== node_modules/a/index.d.ts (1 errors) ====
    /// <reference path="ref.ts"/>
    export declare var y;
                       ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
    
    